# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  common.h  compile.bat  configuration.h  constants.hpp  frag.spv  geom.spv  main.cpp  vert.spv
IncenerateEngine/: CMakeLists.txt  IncenerateEngine_RU.md  README.md  compile.bat
IncenerateEngine/assets/: scene_old.json
IncenerateEngine/assets/shaders/: shader_info.json
IncenerateEngine/source/core/: Application.cpp  EngineMath.hpp
IncenerateEngine/source/filesystem/: FilesystemHelper.cpp
IncenerateEngine/source/serializer/: JsonBindings.cpp
assets/: assets.json  assets.xml  empty.ktx2  materials.json  resources.json  scene.json  scene.xml  scene_new.json  scene_old.json  spirv.cache  sponza_scene.json  tmp  voxel_scene.json
assets/engine/: config.json
assets/materials/: diffuse.json
assets/meshes/: femalebody.mtl
assets/meshes/SimpleScene/: SimpleScene.gltf
assets/meshes/sponza/: sponza.gltf
assets/screenshoots/: new.ktx2  old.ktx2
assets/scripts/: rotate_scene.chai
assets/shaders/: compile.bat  diffuse.frag  diffuse.vert  diffuse_frag.spv  diffuse_shader.json  diffuse_vert.spv  dist  frag.spv  math.glsl  reflect.frag  reflect.vert  shader.frag  shader.vert  shader_util.glsl  shared_lightning.glsl  shared_shaders.glsl  shared_shading.glsl  skybox.vert  skybox_frag.spv  ui.frag  ui.vert  ui_frag.spv  vert.spv
assets/shaders/generators/: Irradiancecube.comp  brdflut.comp  brdflut_gen.frag  irradiancecube.frag  irradiancecube.vert  prefilteredmap.comp  prefilterenvmap.frag  prefilterenvmap.vert
assets/shaders/main/: composition.frag  deferred.frag  diffuse.frag  diffuse.tesc  diffuse.tese  diffuse.vert  diffuse_shared.glsl  lightning_base.glsl  shadow.geom  shadow.vert  skybox.frag  skybox.vert  ssao.frag  ssr.frag  ui.frag  ui.vert
assets/shaders/old/: diffuse.frag  diffuse.vert
assets/shaders/pbr/: pbr_base.frag  pbr_base.vert  pbr_base_frag.spv
assets/shaders/postprocess/: bloom.frag  bloomcompose.frag  downsample.frag  gaussianblur.frag  screen_space_reflections.frag  ssao.frag
assets/shaders/skybox/: reflect_frag.spv  reflect_vert.spv  skybox.frag  skybox.vert  skybox_vert.spv
assets/shaders/source/: brdflut_gen.frag  brdflut_gen.vert  deferred.frag  deferred.vert  deferred_pbr.frag  diffuse.frag  diffuse.vert  diffuse_old  filtercube.vert  irradiancecube.frag  pbr.vert  postprocess.frag  prefilterenvmap.frag  shadow.geom  shadow.vert  shared_lightning.glsl  shared_shaders  shared_shaders.glsl  skybox.frag  skybox.vert  ui.vert
core/: Application.cpp  Application.hpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  WindowHandle.cpp  WindowHandle.h
core/DataTypes/: SwapChainSupportDetails.h
core/filesystem/: FilesystemHelper.cpp
doc/: render_system_diagramm.drawio
source/core/: Application.cpp  Application.h  Application.hpp  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  EngineMath.hpp  GlobalVariables.cpp  GlobalVariables.h  InputMapper.cpp  InputMapper.h  KeycodeConfig.h  RenderScene.cpp  RenderScene.h  SceneConstruct.cpp  SceneConstruct.h  SceneFactory.cpp  SceneFactory.h  VulkanCamera.cpp  VulkanCamera.h  VulkanDevice.cpp  VulkanDevice.h  VulkanHighLevel.cpp  VulkanHighLevel.h  VulkanMain.cpp  VulkanMain.h  VulkanMainStructures.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanStaticHelper.cpp  VulkanStaticHelper.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUniform.cpp  VulkanUniform.h  WindowHandle.cpp  WindowHandle.h
source/core/Camera/: Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h
source/core/Controllers/: CameraController.cpp  CameraController.h  CameraEditorController.cpp  CameraEditorController.h
source/core/Core/: VulkanAllocator.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDevice.hpp  VulkanHighLevel.cpp  VulkanHighLevel.h  VulkanInitializers.h  VulkanRenderSystem.cpp  VulkanRenderSystem.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanStaticHelper.cpp  VulkanStaticHelper.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUniform.cpp  VulkanUniform.h  VulkanVBO.cpp  VulkanVBO.h
source/core/DataTypes/: QueueFamilyIndicies.h  VulkanDeviceStruct.h  VulkanImage.hpp  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipelineStruct.h  VulkanQueueFamilies.h  VulkanSwapChainStruct.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertex.cpp  VulkanVertex.h  WindowHandleStruct.h
source/core/KeyMapping/: InputMapper.cpp  InputMapper.h  KeycodeConfig.h
source/core/Objects/: BaseObject.h  Camera.cpp  Camera.h  RenderObject.cpp  RenderObject.h  StaticMesh.cpp  StaticMesh.h  Transform.cpp  Transform.h
source/core/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineDiffuse.cpp  GraphicsPipelineDiffuse.h  PipelineConfig.h  VulkanPipeline.cpp  VulkanPipeline.h
source/core/Renderer/: ImguiOverlay.cpp  ImguiOverlay.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanHighLevel.cpp  VulkanHighLevel.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanStaticHelper.cpp  VulkanSwapChain.cpp  VulkanVBO.h  (+6 more)
source/editor/: CustomControls.cpp  CustomControls.h  Editor.cpp  Editor.h  EditorUI.cpp  EditorUI.h  error
source/filesystem/: FilesystemHelper.cpp  FilesystemHelper.h
source/scripting/: Script.cpp  Script.h  ScriptBuilder.cpp  ScriptBuilder.h
source/serializer/: AssetSerializer.cpp  AssetSerializer.h  GLMSerialization.cpp  GLMSerialization.h  JsonBindings.cpp  JsonSerializer.h  ResourceSerializer.cpp  ResourceSerializer.h  SceneSerializer.cpp  SceneSerializer.h  Serialization.hpp
source/util/: DynamicNode.hpp  Frustrum.hpp  Frustum.cpp  Frustum.hpp  NonCopyMovable.hpp  NonCopyable.hpp  NonMovable.hpp  Singleton.hpp  StringHelper.cpp  StringHelper.h  ThreadPool.hpp  Transform.cpp  Transform.hpp  bimap.hpp  function.hpp  helpers.hpp  memory.cpp  memory.hpp  reactive.hpp  threading.cpp  threading.hpp  ulog.cpp  ulog.hpp  uuid.cpp  uuid.hpp
tools/: pack_pbr.py  prepare.py  toktx.py
(+627 files in other folders)
